# waysnip

./: .gitignore  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml
capture/: index.html
configuration/: index.html
data/: waysnip-autostart.desktop  waysnip.desktop
docs/: capture.md  configuration.md  faq.md  gallery.md  getting-started.md  index.md  install.md  shortcuts.md  tools.md
faq/: index.html
getting-started/: index.html
scripts/: setup-keybinding.sh
search/: search_index.json
shortcuts/: index.html
site/: 404.html  sitemap.xml
site/gallery/: index.html
site/install/: index.html
site/search/: search_index.json
site/shortcuts/: index.html
tests/: conftest.py  test_auto_save.py  test_base.py  test_capture_dispatch.py  test_cli.py  test_clipboard.py  test_config.py  test_constants.py  test_integration.py  test_region_selector_scaling.py  test_reorder.py  test_save.py  test_tool_properties.py  test_tools.py
tools/: index.html
waysnip/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py  save.py  settings_dialog.py  tray.py
waysnip/capture/: __init__.py  clipboard.py  portal.py  region_selector.py
waysnip/editor/: __init__.py  canvas.py  commands.py  editor_window.py  properties_panel.py  scene.py  tool_properties.py  toolbar.py
waysnip/editor/tools/: __init__.py  arrow.py  base.py  blur.py  crop.py  ellipse.py  freehand.py  highlight.py  line.py  numbered_marker.py  rectangle.py  select_tool.py  text.py
waysnip/gallery/: __init__.py  gallery_window.py  thumbnail_delegate.py  thumbnail_model.py
waysnip/resources/: style.qss
