[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waysnip"
version = "0.1.0"
description = "Lightweight Wayland screenshot and annotation tool"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6",
    "tomli_w>=1.0",
]

[project.scripts]
waysnip = "waysnip.cli:main"
